--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
 </ul><br>
 
 <form action="/verifyreg" method="POST">
-    <label for="email">Name:</label><br>
+    <label for="email">Email:</label><br>
     <input type="email" id="email" name="email"><br>
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password"><br><br>
