login and dashboard done

--- a/templates/code.html
+++ b/templates/code.html
@@ -14,7 +14,7 @@
     </ul>
     <br />
 
-    <form action="/login" method="POST">
+    <form action="/codepage" method="POST">
       <label for="code">Code:</label><br />
       <input type="text" id="code" name="code" /><br />
 
