--- a/templates/login.html
+++ b/templates/login.html
@@ -2,18 +2,16 @@
 <html>
 <body>
 
-<h2>Account Registration</h2><br>
-<br>
+<h2>Login</h2><br>
 
-<form action="/" method="POST">
+<form action="/login" method="POST">
     <label for="email">Email:</label><br>
     <input type="email" id="email" name="email"><br>
     <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password"><br>
-    <label for="number">Phone Number:</label><br>
-    <input type="number" id="number" name="number"><br><br>
+    <input type="password" id="password" name="password"><br><br>
     <input type="submit" value="Submit">
 </form> 
+
 <br><br>
 
 </body>
