docker cimages pushed in docker hub

--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password"><br>
     <label for="number">Phone Number:</label><br>
-    <input type="number" id="number" name="number"><br><br>
+    <input type="tel" id="number" name="number"><br><br>
     <input type="submit" value="Submit">
 </form> 
 <br><br>
